--- a/lecture.tex
+++ b/lecture.tex
@@ -15,11 +15,26 @@
 
 \begin{document}
 
+\pgfdeclareimage[interpolate=true,height=1.5cm]{recoset}{Recoset}
+
 \begin{frame}
   \titlepage
   \begin{center}
+    \pgfuseimage{recoset} \\
     www.recoset.com \\
   \end{center}
+\end{frame}
+
+\begin{frame}{Me}
+  \begin{itemize}
+  \item BEng/BSc (1995-1999)
+  \item Founded two companies:
+    \begin{itemize}
+    \item Idilia (Montreal): Computational Linguistics (2000-2009)
+    \item Recoset (Montreal): Recommendations \& Online Advertising (2009-)
+    \end{itemize}
+  \item 10 years industrial machine learning
+  \end{itemize}
 \end{frame}
 
 \begin{frame}{Contents}
@@ -28,6 +43,7 @@
   \item Industrial Machine Learning
   \item My toolbox
   \item Applications: Computational Linguistics, Recommendations
+  \item 4 stories: Tanks, Fraud, Terrorists, Monkeys
   \end{itemize}
 \end{frame}
 
@@ -42,8 +58,17 @@
       \pgfuseimage{tank-yes} & \pgfuseimage{tank-no} \\
     \end{tabular}
   \end{center}
-  
+
+\pause
+
+\begin{itemize}
+\item Using ML requires insight \pause
+\item An algorithm is only a good as its data
+\end{itemize}
+
 \end{frame}
+
+
 
 \begin{frame}{Decision Trees}
   \begin{itemize}
@@ -82,7 +107,7 @@
     \item Learns the ``best'' split at the top level
       \begin{itemize}
       \item Try every value of every variable
-      \item Choose the one that minimises a cost function
+      \item Choose the one that minimizes a cost function
       \end{itemize}
     \item Partition the dataset along the best split
     \item Repeat (recursion) on each of the halves of the dataset
@@ -135,10 +160,25 @@
 
 \begin{frame}{Story: Medical Expense Fraud}
 
+\vspace{-2cm}
+
   \begin{center}
     \pgfuseimage{insulin}
   \end{center}
   
+\pause
+
+\vspace{-7cm}
+
+\begin{itemize}
+\item Make sure the data is representative
+  \begin{itemize}
+    \item Contains the \alert{difficult} cases
+    \item These define the \alert{decision boundaries} \pause
+  \end{itemize}
+\item The right feature turns failure into success
+\end{itemize}
+
 \end{frame}
 
 \begin{frame}{Feature Engineering}
@@ -158,8 +198,8 @@
 \pgfdeclareimage[interpolate=true,height=7cm]{chess-8x8-100}{chess-8x8-100}
 \pgfdeclareimage[interpolate=true,height=7cm]{chess-8x8-1000}{chess-8x8-1000}
 \pgfdeclareimage[interpolate=true,height=7cm]{chess-8x8-10000}{chess-8x8-10000}
-\pgfdeclareimage[interpolate=true,height=3.5cm]{sm-chess-8x8-10000}{chess-8x8-10000}
-\pgfdeclareimage[interpolate=true,height=3.5cm]{sm-chess-8x8-tr-10000}{chess-8x8-tr-10000}
+\pgfdeclareimage[interpolate=true,height=3.5cm]{sm-chess-8x8-1000}{chess-8x8-1000}
+\pgfdeclareimage[interpolate=true,height=3.5cm]{sm-chess-8x8-tr-1000}{chess-8x8-tr-1000}
 
 \begin{frame}
 
@@ -197,8 +237,8 @@
 
   \begin{center}
     \begin{tabular}{ccc}
-      \pgfuseimage{sm-chess-8x8-10000} & $\Rightarrow$ &
-      \pgfuseimage{sm-chess-8x8-tr-10000}
+      \pgfuseimage{sm-chess-8x8-1000} \pause & $\Rightarrow$ &
+      \pgfuseimage{sm-chess-8x8-tr-1000}
     \end{tabular}
   \end{center}
 
@@ -212,9 +252,9 @@
 \pgfdeclareimage[interpolate=true,height=7cm]{ring-8-100}{ring-8-100}
 \pgfdeclareimage[interpolate=true,height=7cm]{ring-8-1000}{ring-8-1000}
 \pgfdeclareimage[interpolate=true,height=7cm]{ring-8-10000}{ring-8-10000}
-\pgfdeclareimage[interpolate=true,height=3.5cm]{sm-ring-8-10000}{ring-8-10000}
-\pgfdeclareimage[interpolate=true,height=3.5cm]{sm-ring-8-tr-10000}{ring-8-tr-10000}
-\pgfdeclareimage[interpolate=true,height=3.5cm]{sm-ring-8-tr2-10000}{ring-8-tr2-10000}
+\pgfdeclareimage[interpolate=true,height=3.5cm]{sm-ring-8-1000}{ring-8-1000}
+\pgfdeclareimage[interpolate=true,height=3.5cm]{sm-ring-8-tr-1000}{ring-8-tr-1000}
+\pgfdeclareimage[interpolate=true,height=3.5cm]{sm-ring-8-tr2-1000}{ring-8-tr2-1000}
 
 \begin{frame}
 
@@ -252,11 +292,21 @@
 
   \begin{center}
     \begin{tabular}{ccc}
-      \pgfuseimage{sm-ring-8-10000} & $\Rightarrow$ &
-      \pgfuseimage{sm-ring-8-tr-10000} \\
-      & & \pgfuseimage{sm-ring-8-tr2-10000}
+      \pgfuseimage{sm-ring-8-1000} \pause & $\Rightarrow$ &
+      \pgfuseimage{sm-ring-8-tr-1000} \\
+      & & \pgfuseimage{sm-ring-8-tr2-1000}
     \end{tabular}
   \end{center}
+
+  \vspace{-4cm}
+
+  Added features:
+  \begin{itemize}
+    \item $d_1 = \sqrt{x^2 + y^2}$
+    \item $d_2 = \sqrt{(1-x)^2 + (1-y)^2}$
+    \item $m_1 = 8d_1 \mod 8$
+    \item $m_2 = 8d_2 \mod 8$.
+  \end{itemize}
 
 \end{frame}
 
@@ -285,7 +335,7 @@
       \begin{itemize}
         \item Principal Component Analysis
         \item Deep Neural Networks
-        \item Autoencoders
+        \item Auto-encoders
       \end{itemize}
     \end{itemize}
   \item Data
@@ -362,6 +412,7 @@
 \begin{frame}{When should ML be used?}
   \begin{itemize}
   \item To augment modelling
+  \item To aid in data exploration
   \item When you can identify \alert{what} influences an outcome but not \alert{how}
   \item When you can measure your success
   \end{itemize}
@@ -380,19 +431,38 @@
 
 \begin{frame}{Traps and Pitfalls}
 
-* Training on testing data
-* Biasing
-  - Predicting the past from the future
-  - Non-representative samples
-  - Can be very subtle
-* Not having a nullable hypothesis (is it really better)
-* Using a complex classifier with little data
-* Overfitting and other forms of over-optimization
-* Trying to do everything with one model
-* No Free Lunch principle
-
+  \begin{itemize}
+  \item Overfitting and other forms of over-optimization \pause 
+  \item \alert{Overfitting and other forms of over-optimization} \pause
+  \item \alert{\bf Overfitting and other forms of over-optimization} \pause
+  \item Training on testing data
+  \item Biasing
+    \begin{itemize}
+    \item Predicting the past from the future
+    \item Non-representative samples
+    \item Multi-stage pipelines
+    \item Can be very subtle
+    \end{itemize}
+  \item Not having a nullable hypothesis (is it really better)
+  \item Using a complex classifier with little data
+  \item Trying to do everything with one model
+  \item \alert{No Free Lunch} principle
+  \end{itemize}
+  
 \end{frame}
 
+\pgfdeclareimage[interpolate=true,height=5cm]{monkey}{Monkey-typing}
+
+\begin{frame}{Story: Optimizing the Random Numbers}
+  \begin{center}
+  \pgfuseimage{monkey} \pause
+  \end{center}
+
+  \begin{itemize}
+    \item Numbers go up, but the system \alert{gets worse}
+    \item Worse than a waste of time
+  \end{itemize}
+\end{frame}
 
 \pgfdeclareimage[interpolate=true,height=7cm]{notaterrorist}{Khalid_bin_Sultan}
 
@@ -414,15 +484,6 @@
 \item Changing feature $z$ from $0.12345$ to $0.12346$ lead to 13\% better test performance (\alert{sensitivity})
 \item Output is not \alert{probabilistic}
 \end{itemize}
-\end{frame}
-
-\begin{frame}{Story: Named Entity Classification}
-
-  \begin{center}
-    \pgfuseimage{notaterrorist} \\
-    \begin{tiny}{Khalid bin Sultan, son of the Saudi Crown Prince, with US Army Commander Norman Schwartzkopf}\end{tiny}
-  \end{center}
-  
 \end{frame}
 
 \begin{frame}{Toolbox: Cleaning Data Using Boosting}
@@ -480,7 +541,7 @@
 
 %\subsection{Example: Word Sense Disambiguation}
 
-\begin{frame}{Application: Word Sense Disambiguation}
+\begin{frame}{Application: Word Sense Disambiguation (Idilia)}
   \begin{itemize}
   \item An important computational linguistics problem
     \begin{itemize}
@@ -512,11 +573,11 @@
     \fbox{\pgfuseimage{telescope1}}\hskip 0.2cm
     \fbox{\pgfuseimage{telescope2}}\hskip 0.2cm
     \fbox{\pgfuseimage{telescope3}}\hskip 0.2cm
-    \fbox{\pgfuseimage{telescope4}}
+    \fbox{\pgfuseimage{telescope4}} \pause
     
   \item I saw the cow with the telescope.\\
     \fbox{\pgfuseimage{telescope5}}\hskip 0.2cm
-    \fbox{\pgfuseimage{telescope6}}
+    \fbox{\pgfuseimage{telescope6}} \pause
   \item Different types of ambiguity; different ways of resolving
   \item Sometimes not possible to know \alert{(ill-posed)}
   \item Some kinds of errors are very costly
@@ -546,8 +607,62 @@
 
 \end{frame}
 
-\begin{frame}{Application: Recommendations}
-  Netflix, ...
+\begin{frame}{Using ML for Computational Linguistics}
+\begin{itemize}
+\item Designed for ML from the ground up
+\item \$1,000,000s spent tagging data
+\item \$1,000,000s spent buying ancillary data sources
+\item \$1,000,000s spent improving data sources \pause
+\item 1000s of classifiers
+\item \alert{Pure ML algorithms never useful} \pause
+\item ML \alert{augments} language models, doesn't replace
+\item Each one solves a simple problem, well
+\item Processing pipeline of 20 stages, each unbiased wrt input
+\item Random forests
+\item Generalized Linear Models
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Story: Named Entity Classification}
+
+  \begin{center}
+    \pgfuseimage{notaterrorist} \\
+    \begin{tiny}{Khalid bin Sultan, son of the Saudi Crown Prince, with US Army Commander Norman Schwartzkopf}\end{tiny}
+  \end{center}
+
+\end{frame}
+
+\begin{frame}{Application: Recommendations (Recoset)}
+
+\pgfdeclareimage[interpolate=true,height=1cm]{netflix-prize}{netflix-prize}
+\pgfuseimage{netflix-prize}
+
+\begin{itemize}
+\item Goal
+  \begin{itemize}
+  \item Predict \alert{which product} a person is most likely to  buy
+  \item Predict \alert{which people} will buy a product \pause
+  \end{itemize}
+\item Data available
+  \begin{itemize}
+    \item Past purchases (sometimes)
+    \item Clicks and ad views (sometimes)
+    \item Some demographic information (sometimes)
+    \item Product descriptions, attributes (mostly text) \pause
+  \end{itemize}
+\item Challenges
+  \begin{itemize}
+    \item Real-time
+    \item Very sparse data
+    \item Need to make predictions for unknown people
+    \item Must map \alert{textual descriptions} to behaviour
+    \item Need to model \alert{attitude} and \alert{preference}
+    \item Must respect the users' \alert{privacy}
+  \end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Questions}
 \end{frame}
 
 \end{document}
